# HooBank-Rescript

./: .editorconfig  .gitignore  Cargo.toml  FSMDB.sln  FsmDB.sln  LSMDB.sln  README.md  build.sbt  dune-project  index.html  lsmdb.opam  pnpm-lock.yaml  tailwind.config.js  vite.config.mts
.github/: logo.xcf
.github/workflows/: build.yml
FSMDB/: FSMDB.fsproj  MemTable.fs  Program.fs  Utils.fs  WAL.fs
FSMDB.Tests/: FSMDB.Tests.fsproj  Program.fs  UnitTest1.fs  UnitTestMemTable.fs  UnitTestUtils.fs  UnitTestWAL.fs
FSMDB.Tests/TestResults/: Ionide.trx
FsmDB/: FsmDB.fsproj  Memtbl.fs  Record.fs  SSTable.fs  ValueLog.fs  WAL.fs
FsmDB.Tests/: FsmDB.Tests.fsproj  Memtbl.fs  SSTable.fs  UnitTestMemtbl.fs  UnitTestValueLog.fs  UnitTestWAL.fs  ValueLog.fs  WAL.fs
FsmDB.Tests/TestResults/: Ionide.trx
LSMDB/: Program.fs
LSMDB.Tests/: LSMDB.Tests.fsproj  UnitTest1.fs
_build/: .db  .digest-db  log
_build/default/: suka.dune-package  suka.install
docs/: index.html
docs/assets/: index-7dd1c83f.css  index-ad135478.js
lib/: dune  memtbl.ml  suka.ml
lib/log/: dune  log.ml
lib/memtbl/: dune  memtbl.ml
lib/skip_list/: dune  skip_list.ml  skip_list.mli
src/: App.bs.js  App.res  Constants.bs.js  Constants.res  Main.bs.js  Styles.bs.js  Styles.res  lib.rs
src/components/: Billing.bs.js  Billing.res  Business.bs.js  Business.res  Button.bs.js  Button.res  CTA.bs.js  CTA.res  CardDeal.bs.js  CardDeal.res  Client.bs.js  Client.res  FeedBackCard.bs.js  FeedbackCard.bs.js  FeedbackCard.res  (+13 more)
test/: dune  suka_test.ml
tests/: App_test.bs.js  Bindings.bs.js
(+46 files in other folders)
